add translations in .po file

--- a/locales/en/app.po
+++ b/locales/en/app.po
@@ -113,3 +113,41 @@ msgstr "Virtual tour"
 msgid "Visiter"
 msgstr "Visit"
 
+msgid "Valider"
+msgstr "Validate"
+
+msgid "Haut de la page"
+msgstr "Top"
+
+msgid "Notre carte"
+msgstr "Our menu"
+
+msgid "Voir les plats"
+msgstr "See dishes"
+
+msgid "Entrez votre email pour recevoir notre newsletter&nbsp;:"
+msgstr "Enter your email to receive our newsletter&nbsp;:"
+
+msgid "Téléphone :"
+msgstr "Phone :"
+
+msgid "Adresse email :"
+msgstr "Email address :"
+
+msgid "Adresse :"
+msgstr "Address :"
+
+msgid "Horaires :"
+msgstr "Opening hours :"
+
+msgid "Votre nom :"
+msgstr "Your name :"
+
+msgid "Votre adresse email :"
+msgstr "Your email address :"
+
+msgid "Votre numéro de téléphone :"
+msgstr "Your phone number :"
+
+msgid "Votre message :"
+msgstr "Your message :"
