--- a/locales/en/app.po
+++ b/locales/en/app.po
@@ -74,8 +74,8 @@ msgstr "Newsletter Subscription"
 msgid "S'abonner"
 msgstr "Subscribe"
 
-msgid "Mentions légales"
-msgstr "Terms of use"
+msgid "Mentions légales |"
+msgstr "Terms of use |"
 
 msgid "Suivez-nous"
 msgstr "Follow Us"
